# atlas-common

./: Cargo.toml  README.md
.github/workflows/: run-tests.yml
benches/: hash_benchmark.rs
examples/: basic_hashing.rs  c2pa_manifest.rs  full_example.rs
src/: datetime.rs  error.rs  lib.rs
src/c2pa/: asset.rs  datetime.rs  manifest.rs  mod.rs
src/file/: mod.rs  security.rs
src/hash/: algorithms.rs  mod.rs
src/storage/: backend.rs  config.rs  mod.rs  types.rs
src/types/: asset.rs  manifest.rs  mod.rs  storage.rs
src/utils/: file.rs  mod.rs  validation.rs
src/validation/: c2pa.rs  hash.rs  manifest.rs  mod.rs
tests/: c2pa_tests.rs  hash_tests.rs  validation_tests.rs
