[package]
name = "atlas-core"
version = "0.1.0"
authors = ["Marcin Spoczynski <marcin@spoczynski.com>"]
edition = "2021"
rust-version = "1.75"
description = "Core functionality for Atlas ML provenance system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IntelLabs/atlas-core"
keywords = ["c2pa", "ml", "provenance", "integrity", "hash"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Core dependencies (always included)
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hash feature dependencies
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
subtle = { version = "2.5", optional = true }

# C2PA feature dependencies
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
time = { version = "0.3", features = ["serde-well-known"], optional = true }

# Storage feature dependencies
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }

[features]
default = ["hash", "c2pa"]

# Core features that can be used independently
hash = ["dep:sha2", "dep:hex", "dep:subtle"]
c2pa = ["dep:uuid", "dep:time"]
storage = ["dep:async-trait"]
validation = ["c2pa", "hash"]  # Validation needs both for full functionality
file-utils = []  # No additional deps needed

# Async support for storage
async = ["storage", "dep:tokio", "dep:async-trait"]

# Convenience feature for all functionality
all = ["hash", "c2pa", "storage", "validation", "file-utils", "async"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "hash_benchmark"
harness = false
required-features = ["hash"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true