[package]
name = "atlas-common"
version = "0.1.0"
authors = ["Marcin Spoczynski <marcin@spoczynski.com>", "Marcela Melara <marcela.melara@intel.com"]
edition = "2021"
rust-version = "1.75"
description = "Common functionality for Atlas ML provenance system"
documentation = "https://docs.rs/atlas-common"
homepage = "https://github.com/IntelLabs/atlas-common"
repository = "https://github.com/IntelLabs/atlas-common"
readme = "README.md"
license = "Apache-2.0"
keywords = ["c2pa", "ml", "provenance", "integrity", "hash"]
categories = ["cryptography", "data-structures"]
exclude = [
    ".github/*",
    "tests/*",
    "benches/*",
    ".gitignore",
    "test.sh",
]

# Metadata for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core dependencies (always included)
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hash feature dependencies
sha2 = { version = "0.10", features = ["asm", "asm-aarch64"], optional = true }
rayon = { version = "1.8", optional = true }
num_cpus = { version = "1.16", optional = true }
hex = { version = "0.4", optional = true }
subtle = { version = "2.5", optional = true }

# C2PA feature dependencies
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
time = { version = "0.3", features = ["serde-well-known"], optional = true }

# Storage feature dependencies
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }

[features]
default = ["hash", "c2pa"]

# Core features that can be used independently
hash = ["dep:sha2", "dep:rayon", "dep:num_cpus", "dep:hex", "dep:subtle"]
c2pa = ["dep:uuid", "dep:time"]
storage = ["dep:async-trait"]
validation = ["c2pa", "hash", "dep:uuid"]
file-utils = []  # No additional deps needed

# Async support for storage
async = ["storage", "dep:tokio", "dep:async-trait"]

# Convenience feature for all functionality
all = ["hash", "c2pa", "storage", "validation", "file-utils", "async"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
tokio-test = "0.4"

[[bench]]
name = "hash_benchmark"
harness = false
required-features = ["hash"]

[[example]]
name = "basic_hashing"
required-features = ["hash"]

[[example]]
name = "c2pa_manifest"
required-features = ["c2pa"]

[[example]]
name = "full_example"
required-features = ["all"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"

[package.metadata.links]
"CI/CD" = "https://github.com/IntelLabs/atlas-common/actions"
"Bug Reports" = "https://github.com/IntelLabs/atlas-common/issues"
"C2PA Specification" = "https://c2pa.org/specifications/"